cmake_minimum_required(VERSION 3.10)
project(InterviewQuestions)

# Add subdirectories for each question
add_subdirectory(sample_question)
add_subdirectory(factorial)
add_subdirectory(fibonacci)
add_subdirectory(fizzbuzz)
add_subdirectory(prime_number)
add_subdirectory(reverse_string)
add_subdirectory(palindrome)
add_subdirectory(top_k_elements)
# Additional questions
# add_subdirectory(reverse_linked_list)
# add_subdirectory(merge_sorted_lists)
# add_subdirectory(binary_search)
# add_subdirectory(quick_sort)
# add_subdirectory(merge_sort)
# add_subdirectory(heap_sort)
# add_subdirectory(bubble_sort)
# add_subdirectory(selection_sort)
# add_subdirectory(insertion_sort)
add_subdirectory(longest_substring)
add_subdirectory(combination_sum)
add_subdirectory(rotate_array)
add_subdirectory(division)
add_subdirectory(linked_list)
add_subdirectory(reverse_integer)
